fix the letplay logo to not loop and align the logo

--- a/acronymble/public/stylesheets/login.css
+++ b/acronymble/public/stylesheets/login.css
@@ -38,151 +38,201 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-
+/* Code generated from http://cssanimate.com/*/
 .element-animation{
-  animation: animationFrames linear 2s;
-  animation-iteration-count: infinite;
+  animation: animationFrames linear 3s;
+  animation-iteration-count: 1;
   transform-origin: 50% 50%;
-  -webkit-animation: animationFrames linear 2s;
-  -webkit-animation-iteration-count: infinite;
+  -webkit-animation: animationFrames linear 3s;
+  -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 50% 50%;
-  -moz-animation: animationFrames linear 2s;
-  -moz-animation-iteration-count: infinite;
+  -moz-animation: animationFrames linear 3s;
+  -moz-animation-iteration-count: 1;
   -moz-transform-origin: 50% 50%;
-  -o-animation: animationFrames linear 2s;
-  -o-animation-iteration-count: infinite;
+  -o-animation: animationFrames linear 3s;
+  -o-animation-iteration-count: 1;
   -o-transform-origin: 50% 50%;
-  -ms-animation: animationFrames linear 2s;
-  -ms-animation-iteration-count: infinite;
+  -ms-animation: animationFrames linear 3s;
+  -ms-animation-iteration-count: 1;
   -ms-transform-origin: 50% 50%;
 }
 
 @keyframes animationFrames{
   0% {
-    transform:  translate(0px,0px)  ;
+    transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
   }
-  15% {
-    transform:  translate(0px,-25px)  ;
+  10% {
+    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
   }
   30% {
-    transform:  translate(0px,0px)  ;
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  45% {
-    transform:  translate(0px,-15px)  ;
+  40% {
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   60% {
-    transform:  translate(0px,0px)  ;
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  75% {
-    transform:  translate(0px,-5px)  ;
+  70% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   100% {
-    transform:  translate(0px,0px)  ;
+    transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
   }
 }
 
 @-moz-keyframes animationFrames{
   0% {
-    -moz-transform:  translate(0px,0px)  ;
+    -moz-transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
   }
-  15% {
-    -moz-transform:  translate(0px,-25px)  ;
+  10% {
+    -moz-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    -moz-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
   }
   30% {
-    -moz-transform:  translate(0px,0px)  ;
+    -moz-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  45% {
-    -moz-transform:  translate(0px,-15px)  ;
+  40% {
+    -moz-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    -moz-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   60% {
-    -moz-transform:  translate(0px,0px)  ;
+    -moz-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  75% {
-    -moz-transform:  translate(0px,-5px)  ;
+  70% {
+    -moz-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    -moz-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    -moz-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   100% {
-    -moz-transform:  translate(0px,0px)  ;
+    -moz-transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
   }
 }
 
 @-webkit-keyframes animationFrames {
   0% {
-    -webkit-transform:  translate(0px,0px)  ;
+    -webkit-transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
   }
-  15% {
-    -webkit-transform:  translate(0px,-25px)  ;
+  10% {
+    -webkit-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    -webkit-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
   }
   30% {
-    -webkit-transform:  translate(0px,0px)  ;
+    -webkit-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  45% {
-    -webkit-transform:  translate(0px,-15px)  ;
+  40% {
+    -webkit-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    -webkit-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   60% {
-    -webkit-transform:  translate(0px,0px)  ;
+    -webkit-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  75% {
-    -webkit-transform:  translate(0px,-5px)  ;
+  70% {
+    -webkit-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    -webkit-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    -webkit-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   100% {
-    -webkit-transform:  translate(0px,0px)  ;
+    -webkit-transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
   }
 }
 
 @-o-keyframes animationFrames {
   0% {
-    -o-transform:  translate(0px,0px)  ;
+    -o-transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
   }
-  15% {
-    -o-transform:  translate(0px,-25px)  ;
+  10% {
+    -o-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    -o-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
   }
   30% {
-    -o-transform:  translate(0px,0px)  ;
+    -o-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  45% {
-    -o-transform:  translate(0px,-15px)  ;
+  40% {
+    -o-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    -o-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   60% {
-    -o-transform:  translate(0px,0px)  ;
+    -o-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  75% {
-    -o-transform:  translate(0px,-5px)  ;
+  70% {
+    -o-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    -o-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    -o-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   100% {
-    -o-transform:  translate(0px,0px)  ;
+    -o-transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
   }
 }
 
 @-ms-keyframes animationFrames {
   0% {
-    -ms-transform:  translate(0px,0px)  ;
+    -ms-transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
   }
-  15% {
-    -ms-transform:  translate(0px,-25px)  ;
+  10% {
+    -ms-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+  }
+  20% {
+    -ms-transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
   }
   30% {
-    -ms-transform:  translate(0px,0px)  ;
+    -ms-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  45% {
-    -ms-transform:  translate(0px,-15px)  ;
+  40% {
+    -ms-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  50% {
+    -ms-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   60% {
-    -ms-transform:  translate(0px,0px)  ;
+    -ms-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
   }
-  75% {
-    -ms-transform:  translate(0px,-5px)  ;
+  70% {
+    -ms-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  80% {
+    -ms-transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+  }
+  90% {
+    -ms-transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
   }
   100% {
-    -ms-transform:  translate(0px,0px)  ;
+    -ms-transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
   }
-}
-
-#parent {    
-    text-align: center;
-}
-#child {
-    margin: 0 auto;
-    display: inline-block;
-    background: red;
-    color: white;
 }
